{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 142,
  "lineage": "d4da79f5-3e90-9ce8-d065-874f2c27f004",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tanvora_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b1d9e4617162a402",
            "arn": "arn:aws:ec2:ap-south-1:506511510973:elastic-ip/eipalloc-0b1d9e4617162a402",
            "association_id": "eipassoc-0af26863b8e7545b0",
            "domain": "vpc",
            "id": "eipalloc-0b1d9e4617162a402",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0ef765c5ae8d20935",
            "private_dns": "ip-10-0-1-180.ap-south-1.compute.internal",
            "private_ip": "10.0.1.180",
            "public_dns": "ec2-13-234-154-134.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.154.134",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-nat-eip",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-nat-eip",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora",
              "Type": "Public"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00af95fa354fdb788",
            "arn": "arn:aws:ec2:ap-south-1:506511510973:instance/i-0d1565b440cb4351f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "tanvora-ec2-profile",
            "id": "i-0d1565b440cb4351f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-059ea15a81abc53f1",
            "private_dns": "ip-10-0-2-41.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c0cb4ff62078a483",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-020d44a17c0462f42",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-private-ec2",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-private-ec2",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-097858f1d98f5b286"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_instance_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.ec2_private_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.tanvora_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tanvora_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:506511510973:internet-gateway/igw-0c33125ce8bc87674",
            "id": "igw-0c33125ce8bc87674",
            "owner_id": "506511510973",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-igw",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-igw",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora"
            },
            "vpc_id": "vpc-07c98d82db67d153b"
          },
          "dependencies": [
            "aws_vpc.tanvora_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tanvora_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b1d9e4617162a402",
            "association_id": "eipassoc-0af26863b8e7545b0",
            "connectivity_type": "public",
            "id": "nat-0800dcc2842585719",
            "network_interface_id": "eni-0ef765c5ae8d20935",
            "private_ip": "10.0.1.180",
            "public_ip": "13.234.154.134",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d5bc0fc9111c6503",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-nat-gateway",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-nat-gateway",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora",
              "Type": "Private"
            }
          },
          "dependencies": [
            "aws_eip.tanvora_nat_eip",
            "aws_internet_gateway.tanvora_igw",
            "aws_subnet.public_subnet",
            "aws_vpc.tanvora_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0503734f82008610e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0800dcc2842585719",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0503734f82008610e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.tanvora_nat_eip",
            "aws_internet_gateway.tanvora_igw",
            "aws_nat_gateway.tanvora_nat",
            "aws_route_table.private_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.tanvora_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c33125ce8bc87674",
            "id": "r-rtb-052853e3f002796f81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-052853e3f002796f8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tanvora_igw",
            "aws_route_table.public_rt",
            "aws_vpc.tanvora_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:506511510973:route-table/rtb-0503734f82008610e",
            "id": "rtb-0503734f82008610e",
            "owner_id": "506511510973",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0800dcc2842585719",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-private-rt",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-private-rt",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora",
              "Type": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c98d82db67d153b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tanvora_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:506511510973:route-table/rtb-052853e3f002796f8",
            "id": "rtb-052853e3f002796f8",
            "owner_id": "506511510973",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c33125ce8bc87674",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-public-rt",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-public-rt",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora",
              "Type": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c98d82db67d153b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tanvora_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ff693318b5a4976",
            "route_table_id": "rtb-0503734f82008610e",
            "subnet_id": "subnet-020d44a17c0462f42"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_vpc.tanvora_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2e197861913ff7f",
            "route_table_id": "rtb-052853e3f002796f8",
            "subnet_id": "subnet-0d5bc0fc9111c6503"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.tanvora_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:506511510973:security-group/sg-097858f1d98f5b286",
            "description": "Allow outbound only (for private EC2)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097858f1d98f5b286",
            "ingress": [],
            "name": "tanvora-ec2-private-sg",
            "name_prefix": "",
            "owner_id": "506511510973",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-ec2-private-sg",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-ec2-private-sg",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c98d82db67d153b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tanvora_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:506511510973:security-group/sg-03840233e21e55671",
            "description": "Allow HTTPS (443) within the VPC for Interface Endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03840233e21e55671",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow HTTPS from VPC CIDR",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "tanvora-vpc-endpoints-sg",
            "name_prefix": "",
            "owner_id": "506511510973",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-vpc-endpoints-sg",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-vpc-endpoints-sg",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c98d82db67d153b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tanvora_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:506511510973:subnet/subnet-020d44a17c0462f42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020d44a17c0462f42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "506511510973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-private-subnet",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-private-subnet",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora"
            },
            "vpc_id": "vpc-07c98d82db67d153b"
          },
          "dependencies": [
            "aws_vpc.tanvora_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:506511510973:subnet/subnet-0d5bc0fc9111c6503",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5bc0fc9111c6503",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "506511510973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-public-subnet",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-public-subnet",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora"
            },
            "vpc_id": "vpc-07c98d82db67d153b"
          },
          "dependencies": [
            "aws_vpc.tanvora_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tanvora_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:506511510973:vpc/vpc-07c98d82db67d153b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06db86bbcaa94a64d",
            "default_route_table_id": "rtb-03317bff11e15b666",
            "default_security_group_id": "sg-0d5e6a8a5763b764d",
            "dhcp_options_id": "dopt-0855c36d90fe613d6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07c98d82db67d153b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03317bff11e15b666",
            "owner_id": "506511510973",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-vpc",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-vpc",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudwatch_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:506511510973:vpc-endpoint/vpce-041b4b8bd44211e20",
            "dns_entry": [
              {
                "dns_name": "vpce-041b4b8bd44211e20-3onnp9uy.logs.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-041b4b8bd44211e20-3onnp9uy-ap-south-1b.logs.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "logs.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z0607249136QQ5KXVC8N8"
              },
              {
                "dns_name": "streaming-logs.ap-south-1.api.aws",
                "hosted_zone_id": "Z020626017HF9WSV1D6I0"
              },
              {
                "dns_name": "streaming-logs.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z06072481N9JUV598JQAK"
              },
              {
                "dns_name": "logs.ap-south-1.api.aws",
                "hosted_zone_id": "Z06081341IBDX58AQWF0X"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-041b4b8bd44211e20",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-007b8dd9e19b48c00"
            ],
            "owner_id": "506511510973",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03840233e21e55671"
            ],
            "service_name": "com.amazonaws.ap-south-1.logs",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.70",
                "subnet_id": "subnet-020d44a17c0462f42"
              }
            ],
            "subnet_ids": [
              "subnet-020d44a17c0462f42"
            ],
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-cloudwatch-endpoint",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora",
              "Type": "Interface"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-cloudwatch-endpoint",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora",
              "Type": "Interface"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07c98d82db67d153b"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.tanvora_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:506511510973:vpc-endpoint/vpce-092a77985cd583672",
            "cidr_blocks": [
              "35.71.100.0/25",
              "35.71.100.128/26",
              "52.94.20.0/24"
            ],
            "id": "vpce-092a77985cd583672",
            "owner_id": "506511510973",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-66a7420f",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0503734f82008610e"
            ],
            "service_name": "com.amazonaws.ap-south-1.dynamodb",
            "service_region": "ap-south-1",
            "state": "available",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-dynamodb-endpoint",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora",
              "Type": "Gateway"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-dynamodb-endpoint",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora",
              "Type": "Gateway"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-07c98d82db67d153b"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_vpc.tanvora_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_messages_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:506511510973:vpc-endpoint/vpce-09b97b9b5e614dd5d",
            "dns_entry": [
              {
                "dns_name": "vpce-09b97b9b5e614dd5d-3lx731w7.ec2messages.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-09b97b9b5e614dd5d-3lx731w7-ap-south-1b.ec2messages.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "ec2messages.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z052877219NJ11YB0N23I"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09b97b9b5e614dd5d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-09f9f154547220368"
            ],
            "owner_id": "506511510973",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03840233e21e55671"
            ],
            "service_name": "com.amazonaws.ap-south-1.ec2messages",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.79",
                "subnet_id": "subnet-020d44a17c0462f42"
              }
            ],
            "subnet_ids": [
              "subnet-020d44a17c0462f42"
            ],
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-ec2messages-endpoint",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora",
              "Type": "Interface"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-ec2messages-endpoint",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora",
              "Type": "Interface"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07c98d82db67d153b"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.tanvora_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:506511510973:vpc-endpoint/vpce-094eef8ab59010789",
            "cidr_blocks": [
              "52.219.156.0/22",
              "52.219.160.0/23",
              "52.219.62.0/23",
              "3.5.212.0/23",
              "3.5.208.0/22",
              "16.12.40.0/23",
              "52.219.64.0/22",
              "16.12.36.0/22"
            ],
            "id": "vpce-094eef8ab59010789",
            "owner_id": "506511510973",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0503734f82008610e"
            ],
            "service_name": "com.amazonaws.ap-south-1.s3",
            "service_region": "ap-south-1",
            "state": "available",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-s3-endpoint",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora",
              "Type": "Gateway"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-s3-endpoint",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora",
              "Type": "Gateway"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-07c98d82db67d153b"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_vpc.tanvora_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:506511510973:vpc-endpoint/vpce-019c5b5b8584f568b",
            "dns_entry": [
              {
                "dns_name": "vpce-019c5b5b8584f568b-bsp9qjrx.ssm.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-019c5b5b8584f568b-bsp9qjrx-ap-south-1b.ssm.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "ssm.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z018540110GJWQ1C88E1U"
              },
              {
                "dns_name": "ssm.ap-south-1.api.aws",
                "hosted_zone_id": "Z01854001EQ4DYOO5Y0D0"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-019c5b5b8584f568b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01da566595d7dab72"
            ],
            "owner_id": "506511510973",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03840233e21e55671"
            ],
            "service_name": "com.amazonaws.ap-south-1.ssm",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.127",
                "subnet_id": "subnet-020d44a17c0462f42"
              }
            ],
            "subnet_ids": [
              "subnet-020d44a17c0462f42"
            ],
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-ssm-endpoint",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora",
              "Type": "Interface"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-ssm-endpoint",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora",
              "Type": "Interface"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07c98d82db67d153b"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.tanvora_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:506511510973:vpc-endpoint/vpce-06e120685ba342b7b",
            "dns_entry": [
              {
                "dns_name": "vpce-06e120685ba342b7b-1ry90ed1.ssmmessages.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-06e120685ba342b7b-1ry90ed1-ap-south-1b.ssmmessages.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "ssmmessages.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z02066322UBGUM9XX1R3K"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06e120685ba342b7b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0e00720d48ec18800"
            ],
            "owner_id": "506511510973",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03840233e21e55671"
            ],
            "service_name": "com.amazonaws.ap-south-1.ssmmessages",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.175",
                "subnet_id": "subnet-020d44a17c0462f42"
              }
            ],
            "subnet_ids": [
              "subnet-020d44a17c0462f42"
            ],
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-ssmmessages-endpoint",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora",
              "Type": "Interface"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "tanvora-ssmmessages-endpoint",
              "Owner": "Ajay Vishwakarma",
              "Project": "Tanvora",
              "Type": "Interface"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07c98d82db67d153b"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.tanvora_vpc"
          ]
        }
      ]
    }
  ]
}